Issue with sigma character within page title not displaying correctly on smaller screens  has been worked around - sigma replaced with 'e' on smaller screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 
 :root {
-  --square-gap-total: (0.25em + 4px);
-  --max-width: (100vw - 1em);
-  --max-height: (100vh - 2em);
+  --square-gap-total: calc(0.25em + 4px);
+  --max-width: calc(100vw - 1em);
+  --max-height: calc(100vh - 2em);
 } 
 
 body {
@@ -46,10 +46,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 .unclickable {
   cursor: not-allowed;
-}
-
-.sigma-text-size {
-  font-size: 0.75em;
 }
 
 .centered-text-box {
@@ -192,6 +188,10 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 2em; 
 }
 
+#sigma {
+  font-size: 0.75em;
+}
+
 #instructions-container {
   margin: auto auto;
   text-align: center;
@@ -274,29 +274,38 @@ input[type=number]::-webkit-outer-spin-button {
   margin-bottom: 0.5em;
 }
 
-/* CLASS TO BE ADDED FOR THESE */
-/* #start,
-#timer,
-#exit,
-#continue,
-#restart */
 .menu-top {
   font-size: 1.5em;
+  padding: 0 0.5em;
   margin: 0 auto;
 }
 
-/* CLASS TO BE ADDED FOR THESE */
-/* #how-to,
-#stage-number,
-#replay */
 .menu-btm {
   font-size: 1em;
   margin: 0;
 }
 
 /*Media queries begin here */
+@media screen and (max-width: 768px) {
+
+  #how-to {
+    padding-top: 1em;
+  }
+
+}
+
 @media screen and (min-width: 426px) {
 
+  .menu-btm {
+    font-size: 2em;
+    margin: 0;
+  }
+
+  .menu-top {
+    font-size: 2.5em;
+    margin: 0 auto;
+  }
+  
   h1 {
     font-size: 3em;
   }
@@ -304,26 +313,6 @@ input[type=number]::-webkit-outer-spin-button {
   #mute-toggle-label,
   #help-icon {
     font-size: 3em;
-  }
-
-  /* CLASS TO BE ADDED FOR THESE */
-  /* #start,
-  #timer,
-  #exit,
-  #continue,
-  #restart */
-  .menu-top {
-    font-size: 2.5em;
-    margin: 0 auto;
-  }
-
-  /* CLASS TO BE ADDED FOR THESE */
-  /* #how-to,
-  #stage-number,
-  #replay */
-  .menu-btm {
-      font-size: 2em;
-      margin: 0;
   }
 
 }
